# code-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/coco/: __init__.py  main.py
src/coco/agents/: __init__.py  ask_agent.py  base.py  code_agent.py  plan_agent.py  router.py  search_agent.py
src/coco/cli/: __init__.py  app.py  commands.py  display.py
src/coco/config/: __init__.py  settings.py
src/coco/graph/: __init__.py  state.py  workflow.py
src/coco/indexer/: __init__.py  codebase.py
src/coco/memory/: __init__.py  compression.py  history.py
src/coco/tools/: __init__.py  code_tools.py  file_tools.py  index_tools.py  search_tools.py
tests/: conftest.py  test_config.py  test_graph.py  test_router.py  test_tools.py
